--- a/mockBank/templates/index.html
+++ b/mockBank/templates/index.html
@@ -38,6 +38,10 @@
                             location.replace("http://127.0.0.1:5005/balance");
                         });
 
+                        $("#transferButton").click(function(){
+                            location.replace("http://127.0.0.1:5005/transfer");
+                        });
+
                         $("#logout").click(function(){
                             $.ajax({
                                 url: '/logout',
